# Aind.Behavior.CookieCutter.Template

./: README.md  cookiecutter.json
.github/workflows/: test_deployment.yml
generic/hooks/: post_gen_project.py
generic/{{cookiecutter.repository_name}}/: README.md
generic/{{cookiecutter.repository_name}}/docs/: api.rig.rst  conf.py  json-schemas.session.rst
generic/{{cookiecutter.repository_name}}/examples/: example.py
generic/{{cookiecutter.repository_name}}/hooks/: post_gen_project.py
generic/{{cookiecutter.repository_name}}/src/{{cookiecutter.package_name}}/: launcher.py  rig.py
generic/{{cookiecutter.repository_name}}/src/{{cookiecutter.project_name}}/: task_logic.py
hooks/: pre_gen_project.py
{{cookiecutter.repository_name}}/: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.repository_name}}/docs/: api.task_logic.rst  conf.py  index.rst  json-schemas.rig.rst  json-schemas.task_logic.rst
{{cookiecutter.repository_name}}/examples/: example.py
{{cookiecutter.repository_name}}/src/{{cookiecutter.project_name}}/: regenerate.py  task_logic.py
