[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
license = {text = "MIT"}
requires-python = ">=3.11"
dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "aind_behavior_services",
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/{{cookiecutter.repository_name}}/"
Repository = "https://github.com/AllenNeuralDynamics/{{cookiecutter.repository_name}}/"
Issues = "https://github.com/AllenNeuralDynamics/{{cookiecutter.repository_name}}/issues"
Changelog = "https://github.com/AllenNeuralDynamics/{{cookiecutter.repository_name}}/releases"

[project.optional-dependencies]

launcher = ["aind_behavior_experiment_launcher[aind-services]"]

dev = [
    "{{cookiecutter.package_name}}[launcher]",
    "ruff",
    "codespell"
]

docs = [
    'Sphinx<7.3',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'sphinx-jsonschema',
    'sphinx-copybutton',
    "sphinx_mdinclude",
]

[project.scripts]
clabe = "{{cookiecutter.package_name}}.launcher:main"
regenerate = "{{cookiecutter.package_name}}.regenerate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
{{cookiecutter.package_name}} = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.package_name}}.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock'
ignore-words-list = 'nd'
